<resources>
    <string name="app_name">EZLife</string>
    <string name="app_version">Version 1.5.1</string>
    <string name="customerService">      
		EZlife – Customers services center offers information quickly, accurately, and efficiently with dedicated, professional, and modern serving style.
\n\n\t-	Serving all customers over the territory of Vietnam
\n\t-	Serving 24h/7 a week, including weekends and Tet Holidays
\n\t-	Provide utilities:
\n\t\t•	Guide procedures, support customers easily search for information, freedom of choice of products and services on demand;
\n\t\t•	Provide information about products and services, the latest preferential policy;
\n\t\t•	Transact anywhere, anytime, saving time and transaction costs;
\n\t\t•	Receive and resolve any problems and customers complaints;
\n\t\t•	Private Policy.	
\n\nContact us:
\n\n_____________________________
\nCustomers care services EZlife
\n\t•	Tel / Fax: (08) 371 54 714
\n\t•	Hotline: 090 367 4040
\n\t•	Email: info@ezlife.com.vn
\n\t•	Website: www.easylife.com.vn/ www.ezlife.com.vn
	</string>
    <string name="privacy">\n\n<font fgcolor="#ff76923c"><b>Personal Information Protection Policies</b></font>
\n\n\tEZlife understands that customers pay more attention to personal information that you trust us to provide for the security and how we use the information. EasyLife appreciates the trust and commitment that the information will be protected by our best effort.
\n\n\tEZLife makes sure that we will use the customer information are reasonable and considerable in order to always improve the quality of services and giving our customers the exciting experience when using our services.
\n\n<font fgcolor="#ff76923c"><b>Collecting customer information</b></font>
\n\n\tTo use the services of EZLife, customers have to register and provide certain information such as email, name, phone number and address and some other information. The registration procedure helps us determine the provision for members use all application’s utilities. You can choose not to provide us with certain information, but then you will not be able to enjoy some utilities which our feature application offers.
\n\n\tWe also store any information you enter into the website or sent to EZlife. The information will be used for feedback request of customers, for giving appropriate suggestions for each customer while shopping at EZlife, for improving the quality of goods and services and contact with you when necessary.
\n\n\tIn addition, the transaction information includes purchase history, transaction value, shipping method and payment also be archived by EZlife to solve problems that may arise later on.
\n\n<font fgcolor="#ff76923c"><b>Use of Information</b></font>
\n\n\tThe purpose of collecting information makes a contribution to EZlife, thus we can bring utilities benefits as much as possible to customers. Therefore, the information will be used for the following activities:
\n\n\t- Send newsletters introducing new products and promotions of EZlife.
\n\n\t- Provide some utilities, support customer service.
\n\n\t- Improve the quality of customer service EZlife.
\n\n\t- Solve problem, arising dispute regarding the use of software and services.
\n\n\t- Prevent the illegal activities in Vietnam.
\n\n<font fgcolor="#ff76923c"><b>Information Sharing</b></font>
\n\nEZLife known that customer information is an essential part in business working, and thus the information will not be sold, exchanged for any third party. We will not be share the customer information except for these particular cases following:
\n\n\t- In order to protect EZlife and all other third parties, we just give the information about account and other individual information when we do believe that providing the information is suitable with legality, with protection of interest, properties of those who use EZlife services and also other third parties.
\n\n\t- Following a legal request from government departments or we believe that this action is necessary and appropriate with legal request.
\n\n\t- In another cases, we will make a specific announcement to customer when it is necessary to provide the information to the third party and it is only provided when customer feedback is an acceptance. For example: promotion programs which has cooperation, sponsor with other EZlife’s partners; providing the necessary shipping information for transportation partners.
\n\nIt certainly does not include selling, sharing information that leads to reveal individual information of customer for commercial purposes which break the rules put in Personal Information Protection Policies of EZlife.
\n\n<font fgcolor="#ff76923c"><b>Changing and removing the information account</b></font>
\n\n\tYou can change or update your account information any time. Although, you yourself remove all the information we can recover the information from our data base to resolve conflicts, carry out people using agreements, or for technology request, legality request related to the safety and actions of our website. 
\n\n<font fgcolor="#ff76923c"><b>Customer Information Security</b></font>
\n\n\tAn important thing for the customer is that do protect yourself before approaching password information when you use same computer with other people. Then, you must make sure that you had signed out the account when using our services.
\n\n\tEZlife emphasizes that we do concern the customer’s interest in protecting personal information. Thus, if you have any suggestion, or question regarding our security policies, please feel free to contact:
\n\n\tTel/Fax: (08) 371 54 714
\n\n\tEmail: info@ezlife.com.vn
\n\n\t<b>Notes:</b> Personal Information Protection Policies of EZlife are just applied at EZLife’s website. It does not include or relate to other third parties who order advertising or affiliate with EZLife.
	</string>
    <string name="s_ForgotPass_title">Forgot Password</string>
    <string name="s_Info_title">Info</string>
    <string name="s_Title_Transfer">Transfer Voucher</string>
    <string name="recommand1">SHARE APPLICATION WITH YOUR FRIENDS</string>
    <string name="recommand2">Use Coupon With Service</string>
    <string name="recommand3">EZLife</string>
	<string name="s_ChangePass_button">Confirm</string>
	<string name="s_ForgotPass_manual">Enter your email address:</string>
	<string name="s_ForgotPass_hint">Email address</string>
	<string name="s_InfoPage_1">User Manual</string>
	<string name="s_InfoPage_2">Sent Your Feedback</string>
	<string name="s_InfoPage_3">Vote for EZlife</string>
	<string name="s_InfoPage_4">EZlife on Facebook</string>
	<string name="s_InfoPage_5">EZlife on ZingMe</string>
    <string name="s_23_goToHome">Home Page</string>
    <string name="s_TransferCoupon_title1">Your Information:</string>
    <string name="s_TransferCoupon_title2">Recipients Information:</string>
    <string name="s_TransferCoupon_hint1">Your ID</string>
    <string name="s_TransferCoupon_hint2">Password</string>
    <string name="s_TransferCoupon_hint3">Email Address</string>
    <string name="s_TransferCoupon_hint4">ID of Recipients</string>
    <string name="s_TransferCoupon_hint5">Email Address</string>
    <string name="s_TransferCoupon_Confirm">Transfer</string>
    <string name="tip_label">Tip:</string>
    <string name="api_response">Api Response:</string>
    <string name="view_post">View Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="post_tip">\'read_stream\' permission is required to view and delete the post.\n\nUse SDK dialogs to publish stories or post on friends wall. <a href="https://developers.facebook.com/docs/reference/dialogs">More info</a>\n\n<a href="https://developers.facebook.com/docs/reference/api/Comment">Like and Comment on a post</a></string>
</resources>