<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/apiOutputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:text="@string/api_response"
        android:textColor="@color/white" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="140dp" >

        <TextView
            android:id="@+id/apiOutput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:textColor="@color/white" />
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/view_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/view_post" />

        <Button
            android:id="@+id/delete_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/delete_post" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:text="@string/tip_label"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/usefulTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingTop="5dp"
        android:text="@string/post_tip"
        android:textColor="@color/white" />

</LinearLayout>