<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/s_03_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/TopHeight"
        android:background="@drawable/top_name" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/s_Title_Transfer"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize_TopPage"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_Back"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp" >

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/btnBackHeight"
                android:layout_height="@dimen/btnBackHeight"
                android:layout_gravity="center_vertical"
                android:background="@drawable/s_04_back" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bannerHeight"
        android:background="@android:color/transparent"
        android:gravity="top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_Bottom"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_TransferCoupon_title1"
                android:textColor="#8d4b0a" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/linear_border_login"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edtYourID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/s_TransferCoupon_hint1"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ababab" />

                <EditText
                    android:id="@+id/edtYourPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/s_TransferCoupon_hint2"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:password="true"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ababab" />

                <EditText
                    android:id="@+id/edtYourEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/s_TransferCoupon_hint3"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:singleLine="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/s_TransferCoupon_title2"
                android:textColor="#8d4b0a" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/linear_border_login"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edtFriendID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:hint="@string/s_TransferCoupon_hint4"
                    android:imeOptions="actionNext"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ababab" />

                <EditText
                    android:id="@+id/edtFriendEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:hint="@string/s_TransferCoupon_hint5"
                    android:imeOptions="actionDone"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/btnTransfer"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_long_button"
                android:text="@string/s_TransferCoupon_Confirm"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>