<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/s_03_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/TopHeight"
        android:background="@drawable/top_name" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/s_Info_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize_TopPage"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_Back"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp" >

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/btnBackHeight"
                android:layout_height="@dimen/btnBackHeight"
                android:layout_gravity="center_vertical"
                android:background="@drawable/s_04_back" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/ezlife_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_version"
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_Bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linear_border_login"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/arrow_right" />

                <Button
                    android:id="@+id/btnManual"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/s_InfoPage_1"
                    android:textColor="#183b85"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linear_border_login"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/arrow_right" />

                <Button
                    android:id="@+id/btnComment"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/s_InfoPage_2"
                    android:textColor="#183b85"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/linear_border_login"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnVote"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/s_InfoPage_3"
                    android:textColor="#183b85"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ababab" />

                <Button
                    android:id="@+id/btnFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/s_InfoPage_4"
                    android:textColor="#183b85"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ababab" />

                <Button
                    android:id="@+id/btnZingMe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/s_InfoPage_5"
                    android:textColor="#183b85"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>