<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/recommand1"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/share_top"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="95dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnKakaotalk"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/icon_kakaotalk" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:gravity="center"
                android:text="Kakaotalk"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="95dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <com.facebook.android.LoginButton
                android:id="@+id/btnFacebook"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/icon_facebook" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:gravity="center"
                android:text="Facebook"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.8"
        android:background="@drawable/share_bottom"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnWebsite"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/s_23_homebutton"
            android:text="@string/s_23_goToHome"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recommand2"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recommand3"
            android:textColor="#FF0000"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>